# reaKontrol

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Makefile.osx  readme.md  sconstruct
.github/workflows/: build.yml  prBuildResultComment.yml
ci/: buildSite
include/reaper/: reaper_plugin.h  reaper_plugin_functions.h
src/: CMakeLists.txt  fxMap.cpp  fxMap.h  main.cpp  mcu.cpp  niMidi.cpp  reaKontrol.h  sconscript  swell-compat.cpp
